<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/doctor_s_profile_pic"
            android:maxWidth="@dimen/avatar_dimen_max"
            android:maxHeight="@dimen/avatar_dimen_max"
            android:minWidth="@dimen/avatar_dimen"
            android:minHeight="@dimen/avatar_dimen"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvName"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/doctor_small"
            android:drawablePadding="@dimen/drawable_padding"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:text="@string/demo_doc_name" />


        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/tvName"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tv_years_prac"
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:drawableStart="@drawable/ic_local_hospital_black_24dp"
            android:text="@string/demo_practise"
            android:drawablePadding="@dimen/drawable_padding"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/ratingBar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/tvResidency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/demo_residency"
            android:drawableStart="@drawable/ic_school_black_24dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/tv_years_prac"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_years_prac"
            app:layout_constraintTop_toBottomOf="@+id/tv_years_prac" />


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvResidency">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_years_prac">

                <TextView
                    android:id="@+id/tvTitleBio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biography"
                    android:drawableStart="@drawable/passport_biometric"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:textColor="@android:color/black"
                    tools:layout_editor_absoluteX="26dp"
                    tools:layout_editor_absoluteY="223dp" />

                <TextView
                    android:id="@+id/tvBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="152dp"
                    tools:text="@string/demo_text" />


            </LinearLayout>

        </ScrollView>


        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/close_dialog"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close_blue_dark_24dp" />

        <TextView
            android:id="@+id/tvRatingNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toTopOf="@+id/ratingBar"
            tools:text="@string/demo_Rating" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>



